<resources>
    <string name="app_name">Hexagonal tetris</string>
    <string name="act_set">MENU</string>
    <string name="twitter">TWITTER</string>
    <string name="titleLbl">Hexagonal tetris</string>
    <string name="twt">Tutorial</string>
    <string name="play">Play</string>
    <string name="sett">Settings</string>
    <string name="widthR">grid width</string>
    <string name="HeighR">grid height</string>
    <string name="exit">exit</string>
    <string name="lblw">width:</string>
    <string name="lblh">height:</string>
    <string name="minW">minimum width of the grid: 8</string>
    <string name="minH">minimum height of the grid: 17</string>
    <string name="start_text">Welcome to the Hexagonal Tetris. Blah blah blah - rules - blah blah blah.</string>
    <string name="Score">Score:</string>
    <string name="musoff"> music off</string>
    <string name="muson"> music on</string>
    <string name="twitter_consumer_key" translatable="false">t7pUO3Qii11hZE9q1iQ7n9Ahb</string>
    <string name="twitter_consumer_secret" translatable="false">5MLvSsmdKZil0iF0SHITRGPR47xUkNJJMxdhE7ezdfabR4va9b</string>
    <string name="twitter_oauth_verifier" translatable="false">oauth_verifier</string>
    <string name="title_activity_web_view" translatable="false">WebViewActivity</string>
    <string name="share_btn">Share</string>
    <string name="login_btn">Login to Twitter</string>
    <string name="score">score: </string>
    <string name="back_to_menu">back to main menu</string>
    <string name="game_over">game over</string>
    <string name="retry">retry</string>
    <string name="pack">choose pack</string>
    <string name="bttnInStartActivity">ok</string>
    <string name="bttnIDK">calibrate</string>
    <string name="records">Records</string>
    <string name="problem_0" translatable="false">{"height":10,"width":10,"sourceSeeds":[0],"units":[{"members":[{"x":0,"y":0}],"pivot":{"x":0,"y":0}},{"members":[{"x":0,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":2,"y":0},{"x":0,"y":1},{"x":2,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":0}],"pivot":{"x":0,"y":0}},{"members":[{"x":0,"y":0},{"x":1,"y":0}],"pivot":{"x":1,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":1}],"pivot":{"x":0,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":1}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":2,"y":0}],"pivot":{"x":0,"y":0}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":0}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":2,"y":0}],"pivot":{"x":2,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":2}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":1,"y":2}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":1,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":1,"y":2}],"pivot":{"x":1,"y":2}}],"id":0,"filled":[],"sourceLength":100}</string>
    <string name="problem_1" translatable="false">{"height":15,"width":15,"sourceSeeds":[0],"units":[{"members":[{"x":0,"y":0}],"pivot":{"x":0,"y":0}}],"id":1,"filled":[{"x":2,"y":4},{"x":3,"y":4},{"x":4,"y":4},{"x":5,"y":4},{"x":6,"y":4},{"x":11,"y":4},{"x":2,"y":5},{"x":8,"y":5},{"x":11,"y":5},{"x":2,"y":6},{"x":11,"y":6},{"x":2,"y":7},{"x":3,"y":7},{"x":4,"y":7},{"x":8,"y":7},{"x":11,"y":7},{"x":2,"y":8},{"x":9,"y":8},{"x":11,"y":8},{"x":2,"y":9},{"x":8,"y":9},{"x":2,"y":10},{"x":3,"y":10},{"x":4,"y":10},{"x":5,"y":10},{"x":6,"y":10},{"x":9,"y":10},{"x":11,"y":10}],"sourceLength":100}</string>
    <string name="problem_2" translatable="false">{"height":30,"width":15,"sourceSeeds":[0,679,13639,13948,29639,15385,16783,23862,25221,23027],"units":[{"members":[{"x":2,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3},{"x":0,"y":4}],"pivot":{"x":1,"y":2}},{"members":[{"x":3,"y":0},{"x":2,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":1},{"x":2,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":2,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3},{"x":0,"y":4}],"pivot":{"x":0,"y":2}},{"members":[{"x":2,"y":2},{"x":1,"y":1},{"x":2,"y":0},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":3,"y":0},{"x":2,"y":1},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":3,"y":0},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":2,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":1,"y":1},{"x":2,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":2},{"x":0,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":1},{"x":1,"y":1},{"x":3,"y":0},{"x":2,"y":0},{"x":1,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":3},{"x":0,"y":2},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":2},{"x":1,"y":2},{"x":3,"y":0},{"x":2,"y":0},{"x":1,"y":1}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":1},{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":2},{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":2},{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":1,"y":1},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":1},{"x":1,"y":1},{"x":2,"y":1},{"x":2,"y":0},{"x":1,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":3},{"x":0,"y":2},{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":0,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":3},{"x":0,"y":2},{"x":0,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":0,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":1,"y":2},{"x":0,"y":3},{"x":0,"y":4}],"pivot":{"x":0,"y":2}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":0,"y":1}},{"members":[{"x":1,"y":4},{"x":0,"y":3},{"x":1,"y":0},{"x":1,"y":1},{"x":1,"y":2}],"pivot":{"x":0,"y":2}},{"members":[{"x":3,"y":0},{"x":2,"y":0},{"x":1,"y":1},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":0},{"x":2,"y":1},{"x":2,"y":2},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":2},{"x":1,"y":1},{"x":2,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":2},{"x":2,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":0},{"x":0,"y":1},{"x":2,"y":2},{"x":1,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":0,"y":1},{"x":1,"y":1},{"x":3,"y":1},{"x":3,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":0}}],"id":2,"filled":[],"sourceLength":100}</string>
    <string name="problem_3" translatable="false">{"height":20,"width":30,"sourceSeeds":[0,29060,6876,31960,6094],"units":[{"members":[{"x":0,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":0,"y":0}},{"members":[{"x":2,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":1},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":0},{"x":1,"y":0},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":1,"y":0},{"x":1,"y":1},{"x":1,"y":2},{"x":0,"y":3}],"pivot":{"x":0,"y":1}},{"members":[{"x":2,"y":0},{"x":1,"y":1},{"x":0,"y":1},{"x":0,"y":2}],"pivot":{"x":1,"y":1}},{"members":[{"x":2,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":1},{"x":2,"y":0},{"x":1,"y":0},{"x":0,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":0,"y":0},{"x":0,"y":1},{"x":1,"y":1},{"x":0,"y":2}],"pivot":{"x":0,"y":1}},{"members":[{"x":0,"y":1},{"x":1,"y":1},{"x":3,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":0}}],"id":3,"filled":[{"x":2,"y":5},{"x":3,"y":5},{"x":4,"y":5},{"x":5,"y":5},{"x":11,"y":5},{"x":16,"y":5},{"x":17,"y":5},{"x":18,"y":5},{"x":19,"y":5},{"x":25,"y":5},{"x":4,"y":6},{"x":11,"y":6},{"x":18,"y":6},{"x":25,"y":6},{"x":4,"y":7},{"x":11,"y":7},{"x":18,"y":7},{"x":25,"y":7},{"x":4,"y":8},{"x":11,"y":8},{"x":18,"y":8},{"x":25,"y":8},{"x":4,"y":9},{"x":7,"y":9},{"x":8,"y":9},{"x":11,"y":9},{"x":18,"y":9},{"x":21,"y":9},{"x":22,"y":9},{"x":25,"y":9},{"x":4,"y":10},{"x":7,"y":10},{"x":9,"y":10},{"x":18,"y":10},{"x":21,"y":10},{"x":23,"y":10},{"x":2,"y":11},{"x":3,"y":11},{"x":4,"y":11},{"x":5,"y":11},{"x":7,"y":11},{"x":8,"y":11},{"x":9,"y":11},{"x":11,"y":11},{"x":16,"y":11},{"x":17,"y":11},{"x":18,"y":11},{"x":19,"y":11},{"x":21,"y":11},{"x":22,"y":11},{"x":23,"y":11},{"x":25,"y":11}],"sourceLength":100}</string>
    <string name="problem_4" translatable="false">{"height":15,"width":10,"sourceSeeds":[0,16868,32001,13661,12352,29707,19957,2584,21791,18451,17818,26137,7533,29971,2895,177,8466,17014,23414,23008,15766,6045,13537,31051,12140,26930,28921,8444,29697,8269,12976,28635,16520,22345,22572,12272,6532,2148,23344,19542,22290,2586,19530,11006,8700,30014,21695,26153,13694,20701],"units":[{"members":[{"x":1,"y":0},{"x":0,"y":0},{"x":2,"y":0},{"x":3,"y":0}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":1},{"x":0,"y":1},{"x":2,"y":1},{"x":3,"y":0}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":0},{"x":2,"y":0},{"x":2,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":1},{"x":0,"y":1},{"x":2,"y":1},{"x":2,"y":0}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":0},{"x":2,"y":0},{"x":1,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":0,"y":1},{"x":0,"y":0},{"x":1,"y":1},{"x":2,"y":0}],"pivot":{"x":0,"y":1}},{"members":[{"x":1,"y":1},{"x":0,"y":1},{"x":2,"y":0},{"x":3,"y":0}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":0},{"x":0,"y":0},{"x":1,"y":1},{"x":2,"y":1}],"pivot":{"x":1,"y":0}},{"members":[{"x":1,"y":1},{"x":0,"y":1},{"x":1,"y":0},{"x":2,"y":0}],"pivot":{"x":1,"y":1}},{"members":[{"x":1,"y":1},{"x":0,"y":1},{"x":2,"y":0},{"x":2,"y":2}],"pivot":{"x":1,"y":1}}],"id":4,"filled":[],"sourceLength":200}</string>
    <string name="win">win</string>
</resources>