<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.masha.tetris.EndGame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/win"
        android:id="@+id/textView6"
        android:textColor="@color/yell"
        android:foregroundGravity="center_horizontal"
        android:layout_marginTop="134dp"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/textScore"
        android:textColor="@color/yell"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:foregroundGravity="center_horizontal"
        android:textSize="50dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:id="@+id/bttnMyMenu"
        android:background="@color/darkGreen"
        android:textColor="@color/yell"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:id="@+id/bttnRetry"
        android:layout_above="@+id/bttnMyMenu"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
