<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.masha.applicationname.Settings"
    android:background="@color/darkGreen">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_set"
        android:id="@+id/bttnMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/darkGreen"
        android:textColor="@color/yell" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/width"
        android:layout_marginTop="135dp"
        android:textColor="@color/yell"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/bttnMenu" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/height"
        android:textColor="@color/yell"
        android:layout_below="@+id/width"
        android:layout_alignStart="@+id/width" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblw"
        android:id="@+id/textView2"
        android:layout_above="@+id/height"
        android:layout_alignParentStart="true"
        android:textColor="@color/yell" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblh"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/height"
        android:layout_alignParentStart="true"
        android:textColor="@color/yell" />

</RelativeLayout>
